--- a/circle.yml
+++ b/circle.yml
@@ -13,8 +13,8 @@ deployment:
     branch: test-test
     machine:
       environment:
-        DATABASE_URL: postgres://rnxhitvoyjaoam:ydpJMVWFjKNDLQ8qAtgK0Xj9el@ec2-107-20-159-155.compute-1.amazonaws1.com:5432/d5joo3svus3o5g
+        DATABASE_URL: postgres://rnxhitvoyjaoam:ydpJMVWFjKNDLQ8qAtgK0Xj9el@ec2-107-20-159-155.compute-1.amazonaws.com:5432/d5joo3svus3o5g
     heroku:
-      appname: nameless-forest-8826234
+      appname: nameless-forest-8826
 
 
