--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 deployment:
   staging:
     branch: master
+    commands:
+      - curl -k -X POST --user bambooadmin:S8oEIdaL https://bamboo.octanner.com/rest/api/latest/queue/VIS-PEM?os_authType=basic
     heroku:
       appname: nameless-forest-8826
 
@@ -11,9 +13,8 @@ machine:
 deployment:
   staging:
     branch: test-test
-    machine:
-      environment:
-        DATABASE_URL: postgres://rnxhitvoyjaoam:ydpJMVWFjKNDLQ8qAtgK0Xj9el@ec2-107-20-159-155.compute-1.amazonaws.com:5432/d5joo3svus3o5g
+    commands:
+      - curl -k -X POST --user bambooadmin:S8oEIdaL https://bamboo.octanner.com/rest/api/latest/queue/VIS-PEQ?os_authType=basic
     heroku:
       appname: nameless-forest-8826
 
